chore: Set required Java version to 25, use Java 25 in CI