@@ -27,7 +27,7 @@
 
 
   <properties>
-    <java.version>24</java.version>
+    <java.version>25</java.version>
     <graalvm.version>25.0.0</graalvm.version>
     <jspecify.version>1.0.0</jspecify.version>
     <guava.version>33.4.8-jre</guava.version>
@@ -129,11 +129,9 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
-          <release>24</release>
+          <release>25</release>
           <compilerArgs>
             <arg>--add-exports=org.graalvm.polyglot/org.graalvm.polyglot.impl=ALL-UNNAMED</arg>
-            <!-- enable-preview is only needed for Java 24, can be removed once Java 25 is released -->
-            <arg>--enable-preview</arg>
           </compilerArgs>
         </configuration>
       </plugin>
@@ -164,9 +162,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.5.2</version>
         <configuration>
-          <!-- enable-preview is only needed for Java 24, can be removed once Java 25 is released -->
           <argLine>${surefireArgLine}
-						--enable-preview
 						--add-exports=org.graalvm.polyglot/org.graalvm.polyglot.impl=ALL-UNNAMED
 						-Dpolyglot.engine.WarnInterpreterOnly=false
 						--enable-native-access=app.photofox.vipsffm,org.graalvm.truffle
